--- a/model/report-impl/src/test/resources/reports/reportUserAccounts.xml
+++ b/model/report-impl/src/test/resources/reports/reportUserAccounts.xml
@@ -50,14 +50,14 @@
 			</style>
 			<style isBold="false" isDefault="false" name="Detail" style="Base"/>
 			<parameter name="userOid" class="java.lang.String"/>
-			<parameter name="hqlQuery" class="java.lang.String"/>
-			<queryString language="hql"><![CDATA[$P!{hqlQuery}]]></queryString>
+			<parameter name="hqlQueryAccounts" class="java.lang.String"/>
+			<queryString language="hql"><![CDATA[$P!{hqlQueryAccounts}]]></queryString>
 			<field name="accountName" class="java.lang.String"/>
 			<field name="resourceName" class="java.lang.String"/>
 			<detail>
 				<band height="18" splitType="Stretch">
 					<frame>
-						<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Detail" mode="Opaque" x="0" y="1" width="180" height="17"/>
+						<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" positionType="Float" style="Detail" mode="Opaque" x="0" y="1" width="180" height="17"/>
 						<line>
 							<reportElement uuid="47f91801-cf5f-4bed-b19c-ca3931cbf98d" positionType="FixRelativeToTop" x="0" y="0" width="180" height="1" forecolor="#333333">
 								<printWhenExpression><![CDATA[new java.lang.Boolean((int)$V{REPORT_COUNT}.intValue()!=1)]]></printWhenExpression>
@@ -67,8 +67,8 @@
 							</graphicElement>
 						</line>
 						<textField isStretchWithOverflow="true">
-							<reportElement uuid="ebaef16d-2903-4029-9a6b-d4d244558ae9" style="Detail" x="0" y="2" width="180" height="13"/>
-							<textElement verticalAlignment="Middle"/>
+							<reportElement uuid="ebaef16d-2903-4029-9a6b-d4d244558ae9" positionType="Float" stretchType="RelativeToTallestObject" style="Detail" x="0" y="2" width="180" height="13"/>
+							<textElement verticalAlignment="Middle"/> 
 							<textFieldExpression><![CDATA[$F{resourceName}+ ": " + $F{accountName}]]></textFieldExpression>
 						</textField>
 					</frame>
@@ -89,7 +89,7 @@
 	</field>
 	<!-- configuration properties -->
 	<configuration xmlns:r="http://midpoint.evolveum.com/xml/ns/public/report">
-		<r:hqlQuery>
+		<r:hqlQueryAccounts>
 			select r.name.orig as resourceName, 
 			s.name.orig as accountName 
 			from RObjectReference as o, 
@@ -97,7 +97,7 @@
 			RResource as r 
 			where s.resourceRef.targetOid = r.oid and o.owner.oid = $P{userOid} and o.type = 9 and o.targetOid = s.oid and s.kind = 0 
 			order by r.name.orig, s.name.orig
-		</r:hqlQuery>
+		</r:hqlQueryAccounts>
 	</configuration>			
 	<!-- report parameters configuration schema sample with different options -->
 	<configurationSchema>
@@ -122,7 +122,7 @@
 					</xsd:annotation>
 					<xsd:sequence>
 						<!-- HQL query for jasper design (queryString element) -->
-						<xsd:element name="hqlQuery" type="xsd:string"/>
+						<xsd:element name="hqlQueryAccounts" type="xsd:string"/>
 					</xsd:sequence>
 				</xsd:complexType>
 				<xsd:element name="configuration" type="r:ConfigurationType"/>
