--- a/model/report-impl/src/test/resources/reports/reportUserOrgs.xml
+++ b/model/report-impl/src/test/resources/reports/reportUserOrgs.xml
@@ -50,13 +50,13 @@
 			</style>
 			<style isBold="false" isDefault="false" name="Detail" style="Base"/>
 			<parameter name="userOid" class="java.lang.String"/>
-			<parameter name="hqlQuery" class="java.lang.String"/>
-			<queryString language="hql"><![CDATA[$P!{hqlQuery}]]></queryString>
+			<parameter name="hqlQueryOrgs" class="java.lang.String"/>
+			<queryString language="hql"><![CDATA[$P!{hqlQueryOrgs}]]></queryString>
 			<field name="orgName" class="java.lang.String"/>
 			<detail>
 				<band height="18" splitType="Stretch">
 					<frame>
-						<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" style="Detail" mode="Opaque" x="0" y="1" width="100" height="17"/>
+						<reportElement uuid="3e8fdd6d-a6ff-4407-9a1e-5d6b4706300a" positionType="Float" style="Detail" mode="Opaque" x="0" y="1" width="100" height="17"/>
 						<line>
 							<reportElement uuid="47f91801-cf5f-4bed-b19c-ca3931cbf98d" positionType="FixRelativeToTop" mode="Opaque" x="0" y="0" width="100" height="1" forecolor="#333333">
 								<printWhenExpression><![CDATA[new java.lang.Boolean((int)$V{REPORT_COUNT}.intValue()!=1)]]></printWhenExpression>
@@ -68,7 +68,7 @@
 						<textField isStretchWithOverflow="true">
 							<reportElement uuid="ebaef16d-2903-4029-9a6b-d4d244558ae9" style="Detail" x="0" y="2" width="100" height="13"/>
 							<textElement verticalAlignment="Middle"/>
-							<textFieldExpression><![CDATA[$F{orgName}]]></textFieldExpression>
+							<textFieldExpression><![CDATA[$F{orgName}]]></textFieldExpression> 
 						</textField>
 					</frame>
 				</band>
@@ -88,12 +88,12 @@
 	</field>
 	<!-- configuration properties -->
 	<configuration xmlns:r="http://midpoint.evolveum.com/xml/ns/public/report">
-		<r:hqlQuery>
+		<r:hqlQueryOrgs>
 			select o.displayName.orig as orgName 
 			from RAssignment as a, 
 			ROrg as o 
-			where a.targetRef.type = 16 and a.targetRef.targetOid = o.oid and a.owner.oid = $P{userOid}
-		</r:hqlQuery>
+			where a.targetRef.type = 18 and a.targetRef.targetOid = o.oid and a.owner.oid = $P{userOid}
+		</r:hqlQueryOrgs>
 	</configuration>
 	<!-- report parameters configuration schema sample with different options -->
 	<configurationSchema>
@@ -118,7 +118,7 @@
 					</xsd:annotation>
 					<xsd:sequence>
 						<!-- HQL query for jasper design (queryString element) -->
-						<xsd:element name="hqlQuery" type="xsd:string"/>
+						<xsd:element name="hqlQueryOrgs" type="xsd:string"/>
 					</xsd:sequence>
 				</xsd:complexType>
 				<xsd:element name="configuration" type="r:ConfigurationType"/>
