--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.html
@@ -17,8 +17,28 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
-    <div wicket:id="objectClass">
-        <div wicket:id="panel"/>
+    <div class="row">
+        <div class="col-md-3">
+            <h3><wicket:message key="SchemaListPanel.objectClass"/></h3>
+            <table class="table table-striped table-condensed">
+                <thead>
+                <tr>
+                    <th>
+                        <input type="text" class="form-control input-sm" wicket:id="objectClass"
+                               wicket:message="placeholder:SchemaListPanel.objectClass"/>
+                    </th>
+                </tr>
+                </thead>
+                <tbody wicket:id="tableBody">
+                    <tr wicket:id="pageable">
+                        <td><a wicket:id="classLink"><span wicket:id="label"/></a></td>
+                    </tr>
+                </tbody>
+            </table>
+            <span>navigator</span>
+        </div>
+        <div class="col-md-9">
+        </div>
     </div>
 </wicket:panel>
 </html>
