fix for MID-1719

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismPropertyPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/prism/PrismPropertyPanel.html
@@ -25,6 +25,7 @@
               wicket:message="title:prismPropertyPanel.hasOutbound">*</span>
         <span wicket:id="hasPendingModification" style="color: #f0f; font-weight: bold;"
               wicket:message="title:prismPropertyPanel.hasPendingModification">*</span>
+        <i wicket:id="help"/>
     </div>
     <div class="col-xs-8" wicket:id="values">
         <div class="row" wicket:id="value"/>
