--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.html
@@ -18,7 +18,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-4">
             <h3><wicket:message key="SchemaListPanel.objectClass"/></h3>
             <table class="table table-striped table-condensed">
                 <thead>
@@ -46,7 +46,19 @@
             </table>
             <span>navigator</span>
         </div>
-        <div class="col-md-9">
+        <div class="col-md-8">
+            <h3><wicket:message key="SchemaListPanel.details"/></h3>
+            <div class="row">
+                <div class="col-md-6">
+                      asdf
+                </div>
+                <div class="col-md-6">
+                      asdf
+                </div>
+            </div>
+
+            <h3><wicket:message key="SchemaListPanel.attributes"/></h3>
+            todo
         </div>
     </div>
 </wicket:panel>
