schema step panel.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.html
@@ -58,7 +58,7 @@
             </div>
 
             <h3><wicket:message key="SchemaListPanel.attributes"/></h3>
-            todo
+            <div wicket:id="attributeTable"/>
         </div>
     </div>
 </wicket:panel>
