--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/TreeTablePanel.html
@@ -19,14 +19,12 @@
     <div wicket:id="confirmDeletePopup" />
     <div wicket:id="movePopup" />
     <!-- todo fix styles for all header with cog, it must be unified somehow !!!! [lazyman] -->
-    <div class="row" style="margin-top: 15px;">
-        <wicket:remove>
-            <!--<div class="col-md-12 clearfix">-->
-                <!--<form class="form-inline pull-right search-form" wicket:id="searchForm">-->
-                    <!--<div wicket:id="basicSearch"/>-->
-                <!--</form>-->
-            <!--</div>-->
-        </wicket:remove>
+    <div class="row">
+        <div class="col-md-12 clearfix">
+            <form class="form-inline pull-right search-form" wicket:id="searchForm">
+                <div wicket:id="basicSearch"/>
+            </form>
+        </div>
         <div class="col-md-4">
             <div wicket:id="treeHeader" class="row" style="margin: 0; border-bottom: 1px solid #ddd;">
                 <div class="col-xs-9" style="padding-left: 5px;">
