disabled sample dashboard charts.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/SystemInfoPanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/SystemInfoPanel.html
@@ -19,12 +19,14 @@
 <wicket:panel>
     <table class="table table-widget table-system-info">
         <tr style="text-align: center;">
-            <td>
-                <div wicket:id="activeUsers" />
-            </td>
-            <td>
-                <div wicket:id="activeTasks" />
-            </td>
+            <wicket:remove>
+            <!--<td>-->
+                <!--<div wicket:id="activeUsers" />-->
+            <!--</td>-->
+            <!--<td>-->
+                <!--<div wicket:id="activeTasks" />-->
+            <!--</td>-->
+            </wicket:remove>
             <td>
                 <div wicket:id="serverLoad" />
             </td>
