--- a/model/report-impl/src/test/resources/reports/reportAuditLogs.xml
+++ b/model/report-impl/src/test/resources/reports/reportAuditLogs.xml
@@ -19,10 +19,7 @@
         xmlns:xsd="http://www.w3.org/2001/XMLSchema"
 		oid="AUDITLOG-3333-3333-TEST-10000000000"
         version="0">
-	<name>
-		<orig xmlns="http://prism.evolveum.com/xml/ns/public/types-2">Audit logs report</orig>
-		<norm xmlns="http://prism.evolveum.com/xml/ns/public/types-2">Audit logs report</norm>
-	</name>
+	<name>Audit logs report</name>
 	<description>Report made from audit records.</description>
 	<!-- flag if this report is "parent" report, used for gui -->
 	<parent>true</parent>
@@ -44,6 +41,8 @@
 			uuid="67e465c5-46ea-40d2-bea0-469c6cf38937">
 			<property name="net.sf.jasperreports.awt.ignore.missing.font" value="true"/>
 			<property name="net.sf.jasperreports.export.pdf.force.linebreak.policy" value="true"/>
+			<property name="net.sf.jasperreports.export.csv.exclude.origin.band.1" value="title"/>
+			<property name="net.sf.jasperreports.export.csv.exclude.origin.band.2" value="pageFooter"/>
 			<import value="com.evolveum.midpoint.report.ReportUtils"/>
 			<style fontName="DejaVu Sans" fontSize="10" hAlign="Left" isDefault="true" isPdfEmbedded="true" 
 				   name="Base" pdfEncoding="Identity-H" pdfFontName="DejaVuSans.ttf" vAlign="Middle">
