Implementation of assignment editor continues. Still has some quirks. Work in progress.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentTablePanel.html
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/AssignmentTablePanel.html
@@ -17,6 +17,9 @@
 <!DOCTYPE html>
 <html xmlns:wicket="http://wicket.apache.org">
 <wicket:panel>
+    <div wicket:id="assignablePopup" />
+    <div wicket:id="deleteAssignmentPopup" />
+
     <div wicket:id="assignments">
         <div class="row assignable-header">
 
