--- a/model/report-impl/src/test/resources/reports/reportReconciliation.xml
+++ b/model/report-impl/src/test/resources/reports/reportReconciliation.xml
@@ -18,9 +18,9 @@
         xmlns:t="http://prism.evolveum.com/xml/ns/public/types-2"
         xmlns:xsd="http://www.w3.org/2001/XMLSchema"
 		xmlns:ri="http://midpoint.evolveum.com/xml/ns/public/resource/instance-2"
-		oid="RECONCIL-3333-3333-TEST-10000000000"
+		oid="RECONCIL-3333-3333-TEST-10000000001"
         version="0">
-	<name>Reconciliation report</name>
+	<name>Reconciliation report - my</name>
 	<description>Reconciliation report for selected resource.</description>
 	<!-- flag if this report is "parent" report, used for gui -->
 	<parent>true</parent>
@@ -44,18 +44,6 @@
 			<property name="net.sf.jasperreports.export.pdf.force.linebreak.policy" value="true"/>
 			<property name="net.sf.jasperreports.export.csv.exclude.origin.band.1" value="title"/>
 			<property name="net.sf.jasperreports.export.csv.exclude.origin.band.2" value="pageFooter"/>
-			<style fontName="DejaVu Sans" fontSize="10" hAlign="Left" isDefault="true" isPdfEmbedded="true" 
-				   name="Base" pdfEncoding="Identity-H" pdfFontName="DejaVuSans.ttf" vAlign="Middle">
-			</style>
-			<style backcolor="#267994" fontSize="26" forecolor="#FFFFFF" isDefault="false"
-                   mode="Opaque" name="Title" style="Base"/> 
-			<style fontSize="12" forecolor="#000000" isDefault="false" name="Page header"
-                   style="Base"/>
-			<style backcolor="#333333" fontSize="12" forecolor="#FFFFFF" hAlign="Center"
-                   isDefault="false" mode="Opaque" name="Column header" style="Base"/>
-			<style isBold="false" isDefault="false" name="Detail" style="Base"/>
-			<style fontSize="9" forecolor="#000000" isDefault="false" name="Page footer"
-                   style="Base"/>
 			<parameter name="hqlQuery" class="java.lang.String"/>
 			<parameter name="resourceOid" class="java.lang.String"/>
 			<parameter name="resourceName" class="java.lang.String"/>
@@ -246,6 +234,22 @@
 			</summary>
 		</jasperReport>
 	</template>
+	<templateStyle>
+		<jasperTemplate xmlns="http://jasperreports.sourceforge.net/dtds/jaspertemplate.dtd">
+			<style fontName="DejaVu Sans" fontSize="10" hAlign="Left" isDefault="true" isPdfEmbedded="true" 
+				   name="Base" pdfEncoding="Identity-H" pdfFontName="DejaVuSans.ttf" vAlign="Middle">
+			</style>
+			<style backcolor="#267994" fontSize="26" forecolor="#FFFFFF" isDefault="false"
+                   mode="Opaque" name="Title" style="Base"/> 
+			<style fontSize="12" forecolor="#000000" isDefault="false" name="Page header"
+                   style="Base"/>
+			<style backcolor="#333333" fontSize="12" forecolor="#FFFFFF" hAlign="Center"
+                   isDefault="false" mode="Opaque" name="Column header" style="Base"/>
+			<style isBold="false" isDefault="false" name="Detail" style="Base"/>
+			<style fontSize="9" forecolor="#000000" isDefault="false" name="Page footer"
+                   style="Base"/>
+		</jasperTemplate>
+	</templateStyle>
 	<orientation>landscape</orientation>
 	<export>pdf</export>
 	<!-- set to true if report needs hibernate session (e.g. hql query is used) -->
